--- a/TODO
+++ b/TODO
@@ -1,14 +1,15 @@
 Meeting Notes 7/21 13:55
+------------------------
 
-1. Wrap EECDH using our wrapper (the same procedure as ddhm_...)
-2. Write testsuite for EECDH
+今日再看了一次 DH 與 ECDH 的上下層包裝實作方式,
+然後簡單地撰寫了 DHM 的我們的包裝...
 
-3. The ddhm_init need to set P and G
-4. Write testsuite for DDHM
+接下來的分工表:
+1-1. Wrap EECDH using our wrapper (the same procedure as ddhm_...)
+1-2. Write testsuite for EECDH
+2-1. The ddhm_init need to set P and G
+2-2. Write testsuite for DDHM
+3. Read SSL codes (how does it use the crypto wrapper?)
 
-5. Read SSL codes (how does it use the crypto wrapper?)
-
-
-
-Next meeting date: 7/24 Thu (or 7/25 Fri) 10:00 am
+Next internal meeting date: 7/24 Thu (or 7/25 Fri) 10:00 am
 
