--- a/TODO
+++ b/TODO
@@ -75,7 +75,29 @@ Meeting Notes 8/05 14:17
 ------------------------
 
 Trace the code of ECDH.
-- Does it use two certificates?
-- Or does it use the same public key for two tasks?
 
+Q: Does it use two certificates?
+Q: Or does it use the same public key for two tasks?
+A:
+    Only one certificate is needed.
+    In TLS, the authentication procedure is done by
+    signing the "public" params in DH key exchange.
+    No need to sign the whole message before FINISH.
+
+Q: What is the difference between RSA and RSA_PSK?
+   ... because we saw in RFC5246:
+      Key Exchange Alg.  Certificate Key Type
+      RSA                RSA public key; the certificate MUST allow the
+      RSA_PSK            key to be used for encryption (the
+                         keyEncipherment bit MUST be set if the key
+                         usage extension is present).
+                         Note: RSA_PSK is defined in [TLSPSK].
+
+我們剛剛讀了一下 RC5246 RFC5246 有了一點結論
+1. Server 只需要傳一個 certificate 給 client 即可，該 certificate 保證了 key
+   exchange 的訊息是沒有被篡改過的 (signature public key / encryption public key /
+   DH public key 三種其一)
+2. 除此之外，不需要對整個 handshake 訊息用公鑰簽章；只要有 shared secret 就夠了
+   因為在 authenticated encrypted channel 上面，雙方可以比較到此為止所有訊息的
+   hash value 即可
 
