--- a/TODO
+++ b/TODO
@@ -175,15 +175,32 @@ Meeting Notes 2014/08/13 Wed 12:34
         我們不知道怎樣測試修改前、修改後的程式碼效果是否相同？(傳 struct 進去可能會有意外的 side effects)
         註: PolarSSL 的 SSL 根本沒有 unitest ，而且很多 buffer 寫入時也不檢查是否會 overflow
 
-    TODO:
+    當前狀態:
         有些函數的抽象層，嘗試去修改 SSL 端程式以後才發現不適宜
-        #1: 修改 _read_params 和 _read_public 讓他們多取一個 int * argument 以便回傳處理過的 bytes 數
-        #2: 三種函數 write_* 似乎不用幫忙檢查 buffer size 了 (因為 SSL 層也不管)
-        #3: 要用 _alloc 和 _free 包裝想要使用的 context
-            新加上抽象層 ssl->handshake->dhif_ctx
+        三種函數 write_* 我們是想要幫忙檢查 buffer size ，不過 caller 端不管，他直接寫死一個 always passing 的數值
+        _read_params 呼叫者需要知道到底讀了多少 bytes 的資料，所以我們選擇多傳一個 int * argument
+                     不過為了讓 DHM 和 ECDH 一致，我們讓 DHM 版本的 _read_params 內多讀兩個 bytes (of length)
+        _read_public 呼叫者不需要知道到底讀了多少 bytes 的資料
+
+    待辦:
+        #1: 更新 wdhm_write_public/wdhm_read_public
+            更新 SSL caller 端，讓 DHM 的寫法和 ECDH 的寫法相同 (不要處理 length)
+
+        #2: 更新 wecdh_set_params
+            Caller 端呼叫 ecdh_info2.set_params(&ssl->handshake->ecdh_ctx, &(*curve)->grp_id);
+            必須要順便把 point_format 傳進去，更新 ecdh_context
+
+        #3: 更新 dhm 和 ecdh 抽象層的 unitest 讓他吻合我們新的 function prototypes
+            並且加入 25519 的 unitest
+
+        #4: 決定好要用 DHM 還是 ECDH 第一次使用 DH 抽象層時
+                對 cli 來說第一次使用 DH interface 是在 parser server key exchange 的 _read_params
+                對 srv 來說第一次使用 DH interface 是在 write server key exchange 的 _make_params
+            要先 alloc (把兩個 NULL pointers 改掉)
+
+        #5: 各種地方使用抽象層地方的 rewrite
             把所有的 ssl->handshake->dhm_ctx 和 ssl->handshake->ecdh_ctx 換掉
-            (TODO: 看一下應該要把新的東西加在哪)
-            (TODO: 分工 next actions)
+
 
 (2) About adding curve25519
 
