Fix some stuff.  There are bugs when running programs/ssl/ssl_client2

--- a/TODO
+++ b/TODO
@@ -226,3 +226,8 @@ Meeting Notes 2014/08/13 Wed 12:34
 
 Next internal meeting date: 8/20 Wed 10:30 am @MD631
 
+
+
+預計下次開會 8/27 (三)
+看大家 debug 狀況
+
