--- a/TODO
+++ b/TODO
@@ -268,17 +268,25 @@ Manuscript deadline: 9/10 (三)
 
 2014/09/23 Tue 11:32:42 TODO:
 
-    >>> 0. Merge lattice code in
-                comments:
-                    Why MD5?  NEED TO BE FIXED LATER
-                    We have patched the ssl code to support the new sig alg
-
+    >>> 0. Merge lattice code in and then...
         1. Modify ssl_srv.c ssl_cli.c ssl_tls.c => so that we can use new cert
-                Make sure our ciphersuite works in current PolarSSL's program flow
+           Make sure our ciphersuite works in current PolarSSL's program flow
 
-        2. Update all the data targeting the same workstation machine (colossus2)
-                Not the Intel CPU we used previously
+                comments:
+                    WTF MD5?  NEED TO BE FIXED LATER...
+                    We have patched the ssl code to support the new sig alg...
+                    Now LATTICEE has segmentation faults (maybe the buffer problems...)
 
-        3. Explain about why PolarSSL is so slow
+
+
+        2. Update all the testing results (in paper) targeting the same workstation machine
+
+                Let's just use ranger.iis.sinica.edu.tw
+
+
+
+        3. In the paper, explain about why PolarSSL is so slow
+
                 bignum in PolarSSL sucks, too terrible
+
 
