--- a/TODO
+++ b/TODO
@@ -376,9 +376,9 @@ $ run debug_level=3 force_ciphersuite=TLS-LATTICEE-TTS-WITH-AES-128-GCM-SHA256 a
            * commit 1910aa78a3677f1bc2a6c6af61d08dc4cccd917a (origin/development)
            | Author: Paul Bakker <p.j.bakker@polarssl.org>
            | Date:   Fri Jul 11 11:28:56 2014 +0200
-           | 
+           |
            |     Fix release date for 1.3.8
-           |  
+           |
 
            三個方向:
            - PK 吳
@@ -386,4 +386,35 @@ $ run debug_level=3 force_ciphersuite=TLS-LATTICEE-TTS-WITH-AES-128-GCM-SHA256 a
            - CIPHERSUITE 吳
 
            Next meeting 10/10 (五)
+
+
+
+
+
+
+2014/10/13 Mon 14:24:18
+決定 Top Important N Goals before 10/30
+
+    1. 清理程式碼 (DH 層與 PK 層，確定可以加新的演算法。
+       並且把「如何加」的文件寫好，確認執行 ok)
+
+        - MPI 的部分:  測試把修改過的 mpi 放進 PolarSSL 以後，DHM/ECDH 是不是都可以正常 work
+
+        - DH 層的部分: 修改 ssl_tls.c 和 ssl_cli.c
+                       然後直接加 cv25519 看看...
+
+        - PK 層的部分: 試著直接加 rainbow 看看...
+                       有一些程式碼片段還要修一下下，但是大部份都不用改
+
+    2. 按照原本 tests/suites/ 的做法，寫「自動化」的測試，把新的 DH 與 PK 包含進來
+       （不過 SSL 就沒辦法寫 unitest... 只能直接跑 programs/ ）
+
+       - lattice    張
+       - curve25519 陳
+       - tts        吳
+       - rainbow    吳
+
+    3. 放到 GitHub 上
+
+Next meeting date 2014/10/17 (Thu) 10:30 AM at MD631
 
